--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /QtHelpUtil/QtHelpUtil/x64/Debug
+/TestUtil/.vs/TestUtil/v15
+/TestUtil/TestUtil/x64/Debug
+/TestUtil/x64/Debug
