--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 /TestUtil/.vs/TestUtil/v15
 /TestUtil/TestUtil/x64/Debug
 /TestUtil/x64/Debug
+/QtHelpUtil/.vs/QtHelpUtil/v15
+/QtHelpUtil/QtHelpUtil/x64/Release
+/QtHelpUtil/x64/Release
+/TestUtil/TestUtil/x64/Release
+/TestUtil/x64/Release
