--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /QtHelpUtil/x64/Release
 /TestUtil/TestUtil/x64/Release
 /TestUtil/x64/Release
+/TestUtil/x64/Release.zip
+/TestUtil/TestUtil/Release
